// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-list-table Renders \`alarms-list-table\` with custom props 1`] = `
<div
  class="flex"
>
  <div>
    <div
      class="layout alarms-list-table__top-pagination px-4 position-relative align-center"
      style="transform: translateY(0px); opacity: 1;"
    >
      <div
        class="flex alarms-list-table__top-pagination--left xs6"
      >
        <div
          class="layout align-center justify-start"
        >
          <c-density-btn-toggle-stub
            value="1"
          />
          <transition-stub
            name="fade-transition"
          >
            <div
              class="flex px-1"
              style="display: none;"
            >
              <mass-actions-panel-stub
                items=""
                refreshalarmslist="[Function]"
                widget="[object Object]"
              />
            </div>
          </transition-stub>
        </div>
      </div>
      <!---->
      <!---->
    </div>
    <div
      class="v-data-table alarms-list-table v-data-table--expand v-data-table--dense theme--light v-data-table--selectable columns-sm"
    >
      <div
        class="v-data-table__wrapper"
      >
        <alarms-list-row-stub
          actionsinlinecount="4"
          alarm="[object Object]"
          columnsfilters=""
          expandable="true"
          headers="[object Object]"
          medium="true"
          parentalarm="[object Object]"
          refreshalarmslist="[Function]"
          search=""
          selectable="true"
          selectedtag="tag"
          widget="[object Object]"
        />
        <transition-group-stub
          class="v-data-table__expanded__col"
          colspan="2"
          tag="td"
        />
        <alarms-list-row-stub
          actionsinlinecount="4"
          alarm="[object Object]"
          columnsfilters=""
          expandable="true"
          headers="[object Object]"
          medium="true"
          parentalarm="[object Object]"
          refreshalarmslist="[Function]"
          search=""
          selectable="true"
          selectedtag="tag"
          widget="[object Object]"
        />
        <transition-group-stub
          class="v-data-table__expanded__col"
          colspan="2"
          tag="td"
        />
        <alarms-list-row-stub
          actionsinlinecount="4"
          alarm="[object Object]"
          columnsfilters=""
          expandable="true"
          headers="[object Object]"
          medium="true"
          parentalarm="[object Object]"
          refreshalarmslist="[Function]"
          search=""
          selectable="true"
          selectedtag="tag"
          widget="[object Object]"
        />
        <transition-group-stub
          class="v-data-table__expanded__col"
          colspan="2"
          tag="td"
        />
        <alarms-list-row-stub
          actionsinlinecount="4"
          alarm="[object Object]"
          columnsfilters=""
          expandable="true"
          headers="[object Object]"
          medium="true"
          parentalarm="[object Object]"
          refreshalarmslist="[Function]"
          search=""
          selectable="true"
          selectedtag="tag"
          widget="[object Object]"
        />
        <transition-group-stub
          class="v-data-table__expanded__col"
          colspan="2"
          tag="td"
        />
        <alarms-list-row-stub
          actionsinlinecount="4"
          alarm="[object Object]"
          columnsfilters=""
          expandable="true"
          headers="[object Object]"
          medium="true"
          parentalarm="[object Object]"
          refreshalarmslist="[Function]"
          search=""
          selectable="true"
          selectedtag="tag"
          widget="[object Object]"
        />
        <transition-group-stub
          class="v-data-table__expanded__col"
          colspan="2"
          tag="td"
        />
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <thead
            class="v-data-table-header"
            style="transform: translateY(0px); opacity: 1;"
          >
            <tr>
              <th
                aria-label=""
                class="text-start"
                data-value="data-table-select"
                role="columnheader"
                scope="col"
                style="width: 1px; min-width: 1px;"
              >
                <div
                  class="v-data-table__checkbox v-simple-checkbox"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light"
                    >
                      check_box_outline_blank
                    </i>
                    <div
                      class="v-input--selection-controls__ripple"
                    />
                  </div>
                </div>
              </th>
              <th
                aria-label="Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="text-start alarms-list-table__draggable-column sortable"
                data-value="label"
                role="columnheader"
                scope="col"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag="tag"
                  />
                  <!---->
                  <!---->
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </div>
              </th>
            </tr>
          </thead>
          <thead>
            <tr
              class="v-data-table__progress"
            >
              <th
                class="column"
                colspan="2"
              >
                <transition-stub
                  name="fade-transition"
                >
                  <div
                    aria-valuemax="100"
                    aria-valuemin="0"
                    class="v-progress-linear v-progress-linear--visible theme--light"
                    role="progressbar"
                    style="height: 2px;"
                  >
                    <div
                      class="v-progress-linear__background primary"
                      style="opacity: 0.3; left: 0%; width: 100%;"
                    />
                    <div
                      class="v-progress-linear__buffer"
                    />
                    <transition-stub
                      name="fade-transition"
                    >
                      <div
                        class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active"
                      >
                        <div
                          class="v-progress-linear__indeterminate long primary"
                        />
                        <div
                          class="v-progress-linear__indeterminate short primary"
                        />
                      </div>
                    </transition-stub>
                  </div>
                </transition-stub>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="v-data-table__expanded v-data-table__expanded__row"
            />
            <tr
              class="v-data-table__expanded v-data-table__expanded__row"
            />
            <tr
              class="v-data-table__expanded v-data-table__expanded__row"
            />
            <tr
              class="v-data-table__expanded v-data-table__expanded__row"
            />
            <tr
              class="v-data-table__expanded v-data-table__expanded__row"
            />
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`alarms-list-table Renders \`alarms-list-table\` with default and required props 1`] = `
<div
  class="flex"
>
  <c-empty-data-table-columns-stub />
  <c-table-pagination-stub
    total-items="0"
  />
  <!---->
</div>
`;

exports[`alarms-list-table Renders \`alarms-list-table\` with default and required props with cellsContentBehavior is \`truncate\` 1`] = `
<div
  class="flex"
>
  <div>
    <!---->
    <div
      class="v-data-table alarms-list-table v-data-table--expand theme--light columns-sm alarms-list-table--truncated"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <thead
            class="v-data-table-header"
          >
            <tr>
              <th
                aria-label="Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="text-start alarms-list-table__draggable-column sortable"
                data-value="label"
                role="columnheader"
                scope="col"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    ellipsisheaders="true"
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </div>
              </th>
              <th
                aria-label="Actions"
                class="text-start alarms-list-table__draggable-column"
                data-value="actions"
                role="columnheader"
                scope="col"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    ellipsisheaders="true"
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="v-data-table__empty-wrapper"
            >
              <td
                colspan="2"
              >
                No data available
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <c-table-pagination-stub />
  <!---->
</div>
`;

exports[`alarms-list-table Renders \`alarms-list-table\` with default and required props with cellsContentBehavior is \`wrap\` 1`] = `
<div
  class="flex"
>
  <div>
    <!---->
    <div
      class="v-data-table alarms-list-table v-data-table--expand theme--light columns-sm alarms-list-table--wrapped"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <thead
            class="v-data-table-header"
          >
            <tr>
              <th
                aria-label="Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="text-start alarms-list-table__draggable-column sortable"
                data-value="label"
                role="columnheader"
                scope="col"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </div>
              </th>
              <th
                aria-label="Actions"
                class="text-start alarms-list-table__draggable-column"
                data-value="actions"
                role="columnheader"
                scope="col"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="v-data-table__empty-wrapper"
            >
              <td
                colspan="2"
              >
                No data available
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <c-table-pagination-stub />
  <!---->
</div>
`;

exports[`alarms-list-table Renders \`alarms-list-table\` with default and required props with compact mode 1`] = `
<div
  class="flex"
>
  <div>
    <!---->
    <div
      class="v-data-table alarms-list-table v-data-table--expand theme--light columns-sm"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <thead
            class="v-data-table-header"
          >
            <tr>
              <th
                aria-label="Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="text-start alarms-list-table__draggable-column sortable"
                data-value="label"
                role="columnheader"
                scope="col"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </div>
              </th>
              <th
                aria-label="Actions"
                class="text-start alarms-list-table__draggable-column"
                data-value="actions"
                role="columnheader"
                scope="col"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="v-data-table__empty-wrapper"
            >
              <td
                colspan="2"
              >
                No data available
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <c-table-pagination-stub />
  <!---->
</div>
`;

exports[`alarms-list-table Renders \`alarms-list-table\` with default and required props with links column with links in row count 1`] = `
<div
  class="flex"
>
  <div>
    <!---->
    <div
      class="v-data-table alarms-list-table v-data-table--expand theme--light columns-sm"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <thead
            class="v-data-table-header"
          >
            <tr>
              <th
                aria-label="Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="text-start alarms-list-table__draggable-column sortable"
                data-value="links"
                role="columnheader"
                scope="col"
                style="width: 40px; min-width: 40px;"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </div>
              </th>
              <th
                aria-label="Actions"
                class="text-start alarms-list-table__draggable-column"
                data-value="actions"
                role="columnheader"
                scope="col"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="v-data-table__empty-wrapper"
            >
              <td
                colspan="2"
              >
                No data available
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <c-table-pagination-stub />
  <!---->
</div>
`;

exports[`alarms-list-table Renders \`alarms-list-table\` with default and required props with simulate ctrl keydown with selectable = false 1`] = `
<div
  class="flex"
>
  <div>
    <!---->
    <div
      class="v-data-table alarms-list-table v-data-table--expand theme--light v-data-table--selectable columns-sm alarms-list-table__selecting"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <thead
            class="v-data-table-header"
          >
            <tr>
              <th
                aria-label=""
                class="text-start"
                data-value="data-table-select"
                role="columnheader"
                scope="col"
                style="width: 1px; min-width: 1px;"
              >
                <div
                  class="v-data-table__checkbox v-simple-checkbox v-simple-checkbox--disabled"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate v-icon--disabled material-icons theme--light"
                    >
                      check_box_outline_blank
                    </i>
                  </div>
                </div>
              </th>
              <th
                aria-label="Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="text-start alarms-list-table__draggable-column sortable"
                data-value="label"
                role="columnheader"
                scope="col"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </div>
              </th>
              <th
                aria-label="Actions"
                class="text-start alarms-list-table__draggable-column"
                data-value="actions"
                role="columnheader"
                scope="col"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="v-data-table__empty-wrapper"
            >
              <td
                colspan="3"
              >
                No data available
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <c-table-pagination-stub
    total-items="0"
  />
  <!---->
</div>
`;

exports[`alarms-list-table Renders \`alarms-list-table\` with default and required props with simulate ctrl keydown with selectable = true 1`] = `
<div
  class="flex"
>
  <div>
    <!---->
    <div
      class="v-data-table alarms-list-table v-data-table--expand theme--light v-data-table--selectable columns-sm alarms-list-table__selecting"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <thead
            class="v-data-table-header"
          >
            <tr>
              <th
                aria-label=""
                class="text-start"
                data-value="data-table-select"
                role="columnheader"
                scope="col"
                style="width: 1px; min-width: 1px;"
              >
                <div
                  class="v-data-table__checkbox v-simple-checkbox v-simple-checkbox--disabled"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate v-icon--disabled material-icons theme--light"
                    >
                      check_box_outline_blank
                    </i>
                  </div>
                </div>
              </th>
              <th
                aria-label="Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="text-start alarms-list-table__draggable-column sortable"
                data-value="label"
                role="columnheader"
                scope="col"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </div>
              </th>
              <th
                aria-label="Actions"
                class="text-start alarms-list-table__draggable-column"
                data-value="actions"
                role="columnheader"
                scope="col"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="v-data-table__empty-wrapper"
            >
              <td
                colspan="3"
              >
                No data available
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <c-table-pagination-stub
    total-items="0"
  />
  <!---->
</div>
`;

exports[`alarms-list-table Renders \`alarms-list-table\` with expandable, but without selectable 1`] = `
<div
  class="flex"
>
  <div>
    <div
      class="layout alarms-list-table__top-pagination px-4 position-relative align-center"
    >
      <!---->
      <div
        class="flex alarms-list-table__top-pagination--center-absolute xs4"
      >
        <c-pagination-stub
          total="5"
          type="top"
        />
      </div>
      <!---->
    </div>
    <div
      class="v-data-table alarms-list-table v-data-table--expand theme--light columns-sm"
    >
      <div
        class="v-data-table__wrapper"
      >
        <alarms-list-row-stub
          actionsinlinecount="4"
          alarm="[object Object]"
          columnsfilters=""
          expandable="true"
          headers="[object Object],[object Object],[object Object]"
          refreshalarmslist="[Function]"
          search=""
          selectedtag=""
          widget="[object Object]"
        />
        <transition-group-stub
          class="v-data-table__expanded__col"
          colspan="3"
          tag="td"
        />
        <alarms-list-row-stub
          actionsinlinecount="4"
          alarm="[object Object]"
          columnsfilters=""
          expandable="true"
          headers="[object Object],[object Object],[object Object]"
          refreshalarmslist="[Function]"
          search=""
          selectedtag=""
          widget="[object Object]"
        />
        <transition-group-stub
          class="v-data-table__expanded__col"
          colspan="3"
          tag="td"
        />
        <alarms-list-row-stub
          actionsinlinecount="4"
          alarm="[object Object]"
          columnsfilters=""
          expandable="true"
          headers="[object Object],[object Object],[object Object]"
          refreshalarmslist="[Function]"
          search=""
          selectedtag=""
          widget="[object Object]"
        />
        <transition-group-stub
          class="v-data-table__expanded__col"
          colspan="3"
          tag="td"
        />
        <alarms-list-row-stub
          actionsinlinecount="4"
          alarm="[object Object]"
          columnsfilters=""
          expandable="true"
          headers="[object Object],[object Object],[object Object]"
          refreshalarmslist="[Function]"
          search=""
          selectedtag=""
          widget="[object Object]"
        />
        <transition-group-stub
          class="v-data-table__expanded__col"
          colspan="3"
          tag="td"
        />
        <alarms-list-row-stub
          actionsinlinecount="4"
          alarm="[object Object]"
          columnsfilters=""
          expandable="true"
          headers="[object Object],[object Object],[object Object]"
          refreshalarmslist="[Function]"
          search=""
          selectedtag=""
          widget="[object Object]"
        />
        <transition-group-stub
          class="v-data-table__expanded__col"
          colspan="3"
          tag="td"
        />
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <thead
            class="v-data-table-header"
          >
            <tr>
              <th
                aria-label=""
                class="text-start"
                role="columnheader"
                scope="col"
                style="width: 100px; min-width: 100px;"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                </div>
              </th>
              <th
                aria-label="Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="text-start alarms-list-table__draggable-column sortable"
                data-value="label"
                role="columnheader"
                scope="col"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </div>
              </th>
              <th
                aria-label="Actions"
                class="text-start alarms-list-table__draggable-column"
                data-value="actions"
                role="columnheader"
                scope="col"
              >
                <div
                  class="layout align-center"
                >
                  <alarm-header-cell-stub
                    header="[object Object]"
                    selectedtag=""
                  />
                  <!---->
                  <!---->
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="v-data-table__expanded v-data-table__expanded__row"
            />
            <tr
              class="v-data-table__expanded v-data-table__expanded__row"
            />
            <tr
              class="v-data-table__expanded v-data-table__expanded__row"
            />
            <tr
              class="v-data-table__expanded v-data-table__expanded__row"
            />
            <tr
              class="v-data-table__expanded v-data-table__expanded__row"
            />
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <c-table-pagination-stub
    total-items="5"
  />
  <!---->
</div>
`;
